--- a/src/components/Wrapper/style.css
+++ b/src/components/Wrapper/style.css
@@ -1,7 +1,9 @@
 .wrapper {
   min-height: 100%;
+  min-width: 100%;
   padding-bottom: 100px;
   padding-top: 5%;
+  display: flex;
+  align-items: center;
   justify-content: center;
-
 }
